src/test/ui/rfc1445/issue-61188-match-slice-forbidden-without-eq.stderr
error: `&[B]` must implement `PartialEq` to be used in a pattern
  --> $DIR/issue-61188-match-slice-forbidden-without-eq.rs:15:9
   |
LL |         A => (),
   |         ^

error: aborting due to previous error

